--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -5,11 +5,22 @@ html {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: lighter;
@@ -22,3 +33,49 @@ body {
 
 /* STYLES */
 /* Write your CSS below */
+
+h1 {
+  font-size: 450%;
+}
+ul {
+  padding-left: 25px;
+  list-style: disc;
+}
+ol {
+  padding-left: 25px;
+  list-style: decimal;
+}
+#encabezado {
+  margin: 0;
+  background-image: url(/apple-pie/images/apple-pie.jpg);
+  background-position: 100%;
+  background-size: 100%;
+  padding: 25%;
+  color: white;
+  text-align: center;
+}
+hr {
+  margin: 0px;
+}
+p {
+  margin-bottom: 30px;
+}
+
+.all {
+  text-align: justify;
+  margin: 0% 0%;
+  padding: 10%;
+}
+.imagen {
+  height: 50px;
+  padding: 0 33%;
+
+}
+.imagen2 {
+  height: 65px;
+  padding: 0 33%;
+
+}
+h3 {
+  margin: 40px 0;
+}
